# loyality-predict

./: pyproject.toml
data/analytics/: database.db
data/education-platform/: cursos_episodios_completos.csv  habilidades_usuarios.csv  recompensas_usuarios.csv  usuarios_tmw.csv
data/loyalty-system/: clientes.csv
src/analytics/: exec_life_cycle.py  frequencia_valor.py  frequencia_valor.sql  fs_education.sql  fs_life_cycle.sql  fs_transacional.sql  life_cycle.sql  report_ciclo_vida.sql
